# open-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  _commit_msg.txt  docker-compose.prod.yml  docker-compose.yml  mcp_servers.example.json  mkdocs.yml  pyproject.toml
.gh-config/: hosts.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  bench_agent_loop.py  bench_concurrency.py  bench_context_window.py  bench_rag_retrieval.py  run_all.py
benchmarks/results/: 2026-07-06-032856.md  2026-07-06-033047.md  2026-07-06-070632.md  README.md
docs/: api.md  architecture.md  configuration.md  deployment.md  development.md  index.md  observability.md  quickstart.md  rag.md  tools.md
docs/superpowers/specs/: 2026-07-01-open-agent-design.md  2026-07-01-open-agent-tasks.md
examples/: basic_chat.py  browser_tool.py  custom_tool.py  full_agentic_rag_demo.py  mcp_integration.py  multi_model.py  quick_start.py  rag_indexing.py  with_tools.py
examples/docker-quick-start/: .env.example  README.md  docker-compose.yml  init-and-query.ps1  init-and-query.sh
examples/evaluation/: rag_eval_sample.json
shared/: types.ts
src/open_agent/: __init__.py  cli.py  config.py  logging_config.py
src/open_agent/agent/: __init__.py  core.py  (+5 more)
tests/: conftest.py
tests/integration/: test_agent_flow.py  test_api.py
tests/unit/: test_agent_concurrency.py  test_agent_core.py  test_api.py  test_browser.py  test_config.py  test_context_window.py  test_document_loaders.py  test_embedding_cache.py  test_executor.py  test_faiss_store.py  test_http.py  test_hybrid_retriever.py  test_kb_manager.py  test_kb_router.py  test_langgraph_agent.py  test_long_term.py  test_mcp.py  test_memory.py  test_models.py  test_observability.py  test_planner.py  test_providers.py  test_python_tool.py  test_rag.py  test_rag_evaluation.py  test_reranker.py  test_sandbox.py  test_session_manager.py  test_tool_registry.py  test_tools.py  test_tracer.py  test_web_search.py  test_zhipu_provider.py
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: apiClient.ts  backendManager.ts  chatPanel.ts  extension.ts
web/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  types.ts
(+54 files in other folders)
