[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-agent"
version = "0.1.0"
description = "A general-purpose Agentic RAG autonomous work assistant with multi-tool support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Open Agent Contributors" },
]
keywords = ["ai", "agent", "rag", "llm", "mcp", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "faiss-cpu>=1.7",
    "rank-bm25>=0.2",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "python-docx>=1.1",
]
docs = [
    "pymupdf>=1.24",
    "python-docx>=1.1",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.12",
]
mcp = [
    "mcp>=1.0.0",
]
browser = [
    "playwright>=1.40",
]
observability = [
    "langsmith>=0.1.0",
    "langfuse>=2.0",
]
all = [
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.12",
    "mcp>=1.0.0",
    "playwright>=1.40",
    "langsmith>=0.1.0",
    "langfuse>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
open-agent = "open_agent.cli:app"
open-agent-server = "open_agent.server.api:main"

[project.urls]
Homepage = "https://github.com/123comux/open-agent"
Repository = "https://github.com/123comux/open-agent"
Issues = "https://github.com/123comux/open-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/open_agent"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/open_agent"]
